AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/MyRopoApp__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>My Ropo App</label>
</CustomObject>