AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/fields/Apicode__c.field-meta.xml
<CustomField>
    <fullName>Apicode__c</fullName>
    <label>Apicode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>