AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/fields/CID__c.field-meta.xml
<CustomField>
    <fullName>CID__c</fullName>
    <label>CID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>