AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/fields/InvoiceEndpoint__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEndpoint__c</fullName>
    <label>Invoice Endpoint</label>
    <type>Url</type>
</CustomField>