AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/fields/InvoicePDFEndpoint__c.field-meta.xml
<CustomField>
    <fullName>InvoicePDFEndpoint__c</fullName>
    <label>Invoice PDF Endpoint</label>
    <type>Url</type>
</CustomField>