AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/fields/InvoiceStatusByDate_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatusByDate_Endpoint__c</fullName>
    <label>Invoice Status By Date Endpoint</label>
    <type>Url</type>
</CustomField>