AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/fields/InvoiceStatusEndpoint__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatusEndpoint__c</fullName>
    <description>Endpoint for Invoice Status from Ropo</description>
    <label>Invoice Status Endpoint</label>
    <type>Url</type>
</CustomField>