AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/fields/IsInvoiceON__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiceON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox controls if invoice will be send to Ropo or not.</description>
    <label>Is Invoice ON ?</label>
    <type>Checkbox</type>
</CustomField>