AdolaDEVMeta/force-app/main/default/objects/MyRopoApp__c/fields/TokenEndpoint__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpoint__c</fullName>
    <label>Token Endpoint</label>
    <type>Url</type>
</CustomField>